# HODEditorJS

./: .gitignore  AGENTS.md  LICENSE  README.md  TODO.md  agents.md  fix_assemblies_rendering.py  fix_delete.py  fix_docs.py  fix_drag.py  fix_drag2.py  fix_rename.py  fix_replace.py  fix_replace2.py  fix_tree.py  fix_tree2.py  fix_tree3.py  fix_tree4.py  fix_tree5.py  inspect_fenris.js  opencode.json  package-lock.json  package.json  patch.diff  patch_app.py  patch_text_input.py  patch_texture_utils.py  prompt_for_next_agent.txt  recover.py  release_notes.md  update_progress.py  update_progress_delete.py  update_progress_input.py  update_progress_tga.py
.antigravitycli/: 85ab69c4-4d6d-4ddc-8ca1-fe3602cb08ea.json
.sisyphus/: ralph-loop.local.md
agents_info/: hod2_reverse_engineering_knowledge_base.md  hod2_serialization_walkthrough.md  implementation_plan.md  task.md  walkthrough.md
docs/: README.md  RELEASE_PROCESS.md  daenerys-analysis.md
parser/: Cargo.toml  asteroid_3_cloned_v2.hod  cube_v2.hod  dump.txt  dump1.txt  dump_joints.rs  full_dump.txt  gen.txt  orig.txt  pebble_0_rebuilt.hod  scar_dump.txt  test_dock.py  test_dtrm.py  test_dtrm2.py  test_dtrm3.py  test_dtrm4.py  zephyrus_chunks.txt
parser/src/: compiler.rs  dae.rs  hod.rs  iff.rs  inject_backend_fixes.py  lib.rs  obj.rs  shader_map.rs  texture_packer.rs  xpress.rs
src/: App.css  App.tsx  texture_utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
testing/: manual_tests.md
tools/: find_xpress_decompress.py  ghidra_decompress.py  rtl_compress_test.c
(+130 files in other folders)
