[package]
name = "hodeditorjs"
version = "0.1.0"
description = "HODEditorJS App"
authors = ["willywolfy"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hodeditorjs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
byteorder = "1.5"
image = { version = "0.24", default-features = false, features = ["png", "tga", "jpeg"] }
hwr_hod_parser = { path = "../parser" }
rfd = "0.14"
chrono = "0.4.44"
base64 = "0.22.1"


